[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/Crabs/KingCrabA.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Crabs/KingCrabB.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Reginald_King_Of_The_Crabs.gd" type="Script" id=3]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://Misc. Assets/crab_hit_sound.wav" type="AudioStream" id=5]
[ext_resource path="res://Enemies/Wander_Controller.tscn" type="PackedScene" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "King",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 2.6
height = 9.6

[sub_resource type="CircleShape2D" id=3]
radius = 1000.0

[node name="Reginald_King_Of_The_Crabs" type="KinematicBody2D"]
collision_layer = 64
collision_mask = 66
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "King"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
scale = Vector2( 30, 30 )
shape = SubResource( 2 )

[node name="HurtBox" type="Area2D" parent="."]
rotation = 1.5708
scale = Vector2( 30, 30 )
collision_layer = 4
collision_mask = 672

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 1.16667, -0.0666667 )
rotation = 3.55271e-15
shape = SubResource( 2 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 3 )

[node name="Wander_Controller" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, 7 )

[node name="FireStarter" type="Position2D" parent="."]
position = Vector2( -1, 88 )

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="PlayerDetectionZone"]
